refactor profiles